package aed.modelo;

/**
 * Tipo do cliente, que determina em qual fila ele sera inserido.
 */
public enum TipoCliente {
    NORMAL,
    PRIORIDADE
}
